# solar-panels

./: Cargo.toml  Dockerfile  application.yaml  docker-compose.yaml  renovate.json  typos.toml
.github/workflows/: cleanup-old-images.yml  deploy-solar-web.yml  deploy-solar.yml  deploy.yml  pr-build.yaml
.sqlx/: query-0b3e9e40c17103ce791b44e93e01b40070e0a7a97c14e8622286d6e292e159b0.json  query-273fcff1ec2d82e9e01972a75629c570f34d0cfa06af63b10e343c31bae1a980.json  query-2da40883c8b56ac251a1ff6cca8b7c37a2cd87f43f12f4c99ebbdddf55329775.json  query-3f4856f9ef02e8df2e1f6ea448419b77f0bcec9d75ebaaf5075ec458345678cf.json  query-40a622f4e498b490432fe5afb4ddba7be1245ce913bcbe62fe7c62e3951aeb3e.json  query-4912959cb63c72e3244120ca6ed7c423daab0d67683957b704f15583777cdd9a.json  query-622511ed509ab98ea939cbe2eedad0b1ac8e5ae4fdcf7b8fd17bd1485ea409ba.json  query-8f86d53bbb694d053600d515a7a8a07bfc1bb4e345f378dfcc3affed43765c2a.json  query-9dc0bc0731ed20de4b6db8772da07821f616b3ad4d9c8579598d2211af7e91c6.json  query-a337e39dd2be5fc8548d70218f84414df5b560ae13bc9a869bb2d75d04926550.json  query-aefdb24967a5c98710826ea4414780307d5da966cff5a9bb319166507d7198fa.json  query-cf9bddc3de88818f26fa46bb3c6c4901e59332ae03b7c99a32d894e80cc0f706.json  query-d06705150c37b1b27e656b00c456b31b7cbffeff4cfaad1df2383e5ad21e93a3.json  query-e4d7b565fac265b32cb6ac9915ee2919e4713aa0b3a8c30aa1e1fa5ab1a3be9b.json  query-e860d812eef8c4920053c7eef12a333d6a46616e224fd1d905760e11e3689e72.json  query-f39b2d20fa59597962b44051f72485f4e27af21b825e7e393c5ed5ccdb866f77.json
kubernetes/: client.policy.yaml  database.yaml  deployment.yaml  gateway.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  securitypolicy.yaml  service.yaml
migrations/: 20250611115632_init.sql  20250615091612_add_tailscaledb_extension_and_table.sql  20250620141757_drop_old_table.sql  20250622112044_add_uv_and_weather_details.sql
src/: main.rs  tracing_setup.rs  types.rs
src/background/: mod.rs
src/goodwe/: mod.rs  types.rs
src/weather/: mod.rs  types.rs
web/: .env.production  Dockerfile  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/src/: App.tsx  loader.tsx  main.tsx  types.ts
web/src/components/ui/: chart.tsx
