[package]
name = "solar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
vesper = "0.13.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tower = { version = "0.5.1", features = ["limit"] }
base64 = "0.22.1"
chrono-tz = "0.10.3"
futures = "0.3.31"

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }

