[package]
name = "solar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
vesper = "0.13.0"
reqwest = { version = "0.13", features = ["form", "json"] }
reqwest-tracing = { version = "0.7.0", features = ["opentelemetry_0_31"] }
reqwest-middleware = { version = "0.5.1", features = ["json", "form"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tower = { version = "0.5.1", features = ["limit"] }
base64 = "0.22.1"
chrono-tz = "0.10.3"
futures = "0.3.31"
quick-xml = { version = "0.39.0", features = ["serialize"] }

opentelemetry = { version = "0.31.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "metrics", "grpc-tonic", "reqwest-blocking-client", "logs", "reqwest-rustls"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-resource-detectors = { version = "0.10" }
opentelemetry-proto = { version = "0.31.0"}
tonic = { version = "0.14.5", features = ["tls-native-roots"] }
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.1"
axum-tracing-opentelemetry = "0.33.0"
opentelemetry-appender-tracing = "0.31.1"
http = "1.4.0"

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }

