[package]
name = "solar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.23"
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
reqwest = { version = "0.13.4", features = ["form", "json"] }
reqwest-tracing = { version = "0.7.1", features = ["opentelemetry_0_32"] }
reqwest-middleware = { version = "0.5.2", features = ["json", "form"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tower = { version = "0.5.1", features = ["limit"] }
base64 = "0.22.1"
rustls = "0.23"
chrono-tz = "0.10.3"
futures = "0.3.31"
quick-xml = { version = "0.40.0", features = ["serialize"] }

opentelemetry = { version = "0.32.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "metrics", "grpc-tonic", "reqwest-blocking-client", "logs", "reqwest-rustls", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }
opentelemetry-resource-detectors = { version = "0.11" }
opentelemetry-proto = { version = "0.32.0"}
tonic = { version = "0.14.5", features = ["tls-native-roots"] }
opentelemetry_sdk = "0.32.0"
tracing-opentelemetry = "0.33.0"
axum-tracing-opentelemetry = "0.38.0"
opentelemetry-appender-tracing = "0.32.0"
http = "1.4.2"
tokio-cron-scheduler = { version = "0.15.1", features = ["english", "tracing-subscriber"] }

